# pebl

./: .clang-format  .gitignore  .lldbinit  CMakeLists.txt  README.md
.github/workflows/: actions.yml  build.yml
cmake/: CMakeDeterminePeblCompiler.cmake  CMakePeblCompiler.cmake.in  CMakePeblInformation.cmake  CMakeTestPeblCompiler.cmake
doc/: PeblLexer.g4  PeblParser.g4  grammar.md  pebl_cloc.txt
doc/design/: DD01_driver-script.md  DD02_c-interop-script.md  DD03-macros.md  README.md
highlight/pebl/: package.json
highlight/pebl/syntaxes/: pebl.tmLanguage.json
include/ast/: Type.h  TypeTable.h  ast.h  location.h  parse-checks.h  scope-resolve.h
include/builtins/: compiler-builtin.h
include/codegen/: codegen-llvm.h
include/common/: bsstring.h  ll-common.h
include/context/: arguments.h  context.h
include/parser/: lexer.h  parser.h
runtime/: CMakeLists.txt  io.c  memory.c  runtime.c
runtime/start/: main.c
scripts/: build.cmd  build.sh  cloc.sh  convert.py  format.sh  make_revision.py  pebl  run_tests.cmd  run_tests.py  run_tests.sh  simple-driver.sh
src/: CMakeLists.txt
src/ast/: CMakeLists.txt  Type.c  TypeTable.c  ast.c  location.c  parse-checks.c  parse-checks.pebl  scope-resolve.c
src/codegen/: CMakeLists.txt  cg-builtin.c  cg-call.c  cg-constant.c  cg-debug.c  cg-debug.h  cg-expr.c  cg-expr.h  cg-function.c  cg-helpers.c  cg-helpers.h  cg-inst.c  cg-inst.h  cg-operator.c  cg-operator.def  cg-operator.h  codegen-llvm.c  compiler-builtins.c  compiler-builtins.def
src/codegen/debug/: debugwrappers.c  debugwrappers.h
src/common/: CMakeLists.txt  bsstring.c
src/context/: CMakeLists.txt  arguments.c  context.c
src/definitions/: builtin-types.def  builtins.def  expression-types.def
src/parser/: CMakeLists.txt  lexer.c  parser.c
src/tool/compiler/: CMakeLists.txt  main.c
src/tool/driver/: CMakeLists.txt  driver.py
src/tool/driver/driver/: arguments.py  mp.py  optimization.py  paths.py  utils.py
src/tool/lexer/: CMakeLists.txt  main.c
src/tool/parser/: CMakeLists.txt  main.c  scope.c
src/tool/peblc/: CMakeLists.txt  main.c
src/tool/peblp/: CMakeLists.txt  preprocess.pebl
src/tool/peblpy/: Context.py  clayer.py
src/tool/test/: CMakeLists.txt  main.c  test.pebl
stdlib/: CMakeLists.txt  io.pebl  memory.pebl
test/codegen/: assert-fail.good  assert.pebl  call.pebl  global.pebl  hello-emoji.good  hello-emoji.pebl  ifscope.pebl  infer_type.good  infer_type.pebl  linkedlist.good  linkedlist.pebl  linkedlist2.good  linkedlist2.pebl  negativeNumbers.good  negativeNumbers.pebl  or.pebl  print.pebl  printargs.pebl  printargs1.good  printargs2.good  printargs3.good  printargs4.good  ptr_type_mismatch.pebl  recurseprint.good  recurseprint.pebl  recursesum.good  recursesum.pebl  shortcircuit_and.good  shortcircuit_and.pebl  shortcircuit_or.good  shortcircuit_or.pebl  simplestruct.good  simplestruct.pebl  simplestruct2.good  sizeof.good  sizeof.pebl  test.yaml  testStdio.pebl  typeof.good  typeof.pebl  (+2 more)
test/codegen/multicomp/: a.good  a.pebl  b.pebl  test.yaml
test/parse-checks/: break-in-loop-1.good  break-in-loop-1.pebl  break-in-loop-2.pebl  break-in-loop-3.good  break-in-loop-3.pebl  break-in-loop-4.pebl  break-in-loop-5.pebl  func-at-filescope-1.pebl  func-at-filescope-2.good  func-at-filescope-2.pebl  func-at-filescope-3.good  func-at-filescope-3.pebl  globals.pebl  return-in-func-1.good  return-in-func-2.good  return-in-func-2.pebl  return-in-func-3.pebl  return-in-func-4.pebl  tests.yaml  type-at-filescope-1.pebl  type-at-filescope-2.good  type-at-filescope-2.pebl  type-at-filescope-3.good  type-at-filescope-3.pebl
test/parsing/: complex-grammar.good  complex-grammar.pebl  hello-simple.good  hello-simple.pebl  hello.good  hello.pebl  parsing.yaml  simple-grammar.good  simple-grammar.pebl
test/scope/: elsescope.good  elsescope.pebl  funkyelse.pebl  ifscope.good  ifscope.pebl  test.yaml
test/stdlib/: stdlib.yaml
